--- a/MenuApp/appsettings.json
+++ b/MenuApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-904CAD7\\SQLEXPRESS; Database =MenuAppDb; Trusted_Connection=True; MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
